<?xml version="1.0" encoding="utf-8"?>
<!-- Drawer: 2-level menu. Top-level items group the per-section sub-items.
     Mirrors build.json::ui.sections[].drawer_default_children. Each group's
     items are static placeholders for now; later the per-section module will
     dynamically inject account/feed/server/calendar/tunnel names. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/drawer_group_mail" android:checkableBehavior="single">
        <item android:title="@string/section_mail" android:icon="@drawable/ic_mail">
            <menu>
                <item android:id="@+id/drawer_mail_all" android:title="@string/drawer_mail_all" />
                <item android:id="@+id/drawer_mail_add" android:title="@string/drawer_mail_add" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_feed" android:checkableBehavior="single">
        <item android:title="@string/section_feed" android:icon="@drawable/ic_rss">
            <menu>
                <item android:id="@+id/drawer_feed_all" android:title="@string/drawer_feed_all" />
                <item android:id="@+id/drawer_feed_add" android:title="@string/drawer_feed_add" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_chat" android:checkableBehavior="single">
        <item android:title="@string/section_chat" android:icon="@drawable/ic_chat">
            <menu>
                <item android:id="@+id/drawer_chat_all" android:title="@string/drawer_chat_all" />
                <item android:id="@+id/drawer_chat_add" android:title="@string/drawer_chat_add" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_cal" android:checkableBehavior="single">
        <item android:title="@string/section_cal" android:icon="@drawable/ic_calendar">
            <menu>
                <item android:id="@+id/drawer_cal_all" android:title="@string/drawer_cal_all" />
                <item android:id="@+id/drawer_cal_add" android:title="@string/drawer_cal_add" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_vault" android:checkableBehavior="single">
        <item android:title="@string/section_vault" android:icon="@drawable/ic_vault">
            <menu>
                <item android:id="@+id/drawer_vault_pw"   android:title="@string/drawer_vault_pw" />
                <item android:id="@+id/drawer_vault_totp" android:title="@string/drawer_vault_totp" />
                <item android:id="@+id/drawer_vault_gen"  android:title="@string/drawer_vault_gen" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_wg" android:checkableBehavior="single">
        <item android:title="@string/section_wg" android:icon="@drawable/ic_wg">
            <menu>
                <item android:id="@+id/drawer_wg_tunnels" android:title="@string/drawer_wg_tunnels" />
                <item android:id="@+id/drawer_wg_import"  android:title="@string/drawer_wg_import" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_solutions" android:checkableBehavior="single">
        <item android:title="@string/section_solutions" android:icon="@drawable/ic_solutions">
            <menu>
                <item android:id="@+id/drawer_solutions_professional" android:title="@string/drawer_solutions_professional" />
                <item android:id="@+id/drawer_solutions_personal"     android:title="@string/drawer_solutions_personal" />
                <item android:id="@+id/drawer_solutions_tools"        android:title="@string/drawer_solutions_tools" />
                <item android:id="@+id/drawer_solutions_cloud"        android:title="@string/drawer_solutions_cloud" />
                <item android:id="@+id/drawer_solutions_other"        android:title="@string/drawer_solutions_other" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/drawer_group_c3" android:checkableBehavior="single">
        <item android:title="@string/section_c3" android:icon="@drawable/ic_settings">
            <menu>
                <item android:id="@+id/drawer_c3_reports"   android:title="@string/drawer_c3_reports" />
                <item android:id="@+id/drawer_c3_stack"     android:title="@string/drawer_c3_stack" />
                <item android:id="@+id/drawer_c3_health"    android:title="@string/drawer_c3_health" />
                <item android:id="@+id/drawer_c3_workflows" android:title="@string/drawer_c3_workflows" />
            </menu>
        </item>
    </group>

    <!-- App-level actions (not section-specific). -->
    <group android:id="@+id/drawer_group_app">
        <item android:id="@+id/drawer_check_updates"
              android:title="@string/check_updates"
              android:icon="@drawable/ic_refresh" />
    </group>
</menu>
