<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press launcher icon → these shortcuts. Each carries a
     shortcut_action extra; MainActivity.handleShortcutIntent dispatches
     via the same target grammar the in-app tile click uses
     (section: / page: / action: / http(s): / intent: / app: / stub:). -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="update"
        android:enabled="true"
        android:icon="@drawable/ic_refresh"
        android:shortcutShortLabel="@string/shortcut_update_short"
        android:shortcutLongLabel="@string/shortcut_update_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.diegonmarcos.superapp"
            android:targetClass="com.diegonmarcos.superapp.MainActivity">
            <extra android:name="shortcut_action" android:value="action:check_updates" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.diegonmarcos.superapp"
            android:targetClass="com.diegonmarcos.superapp.MainActivity">
            <extra android:name="shortcut_action" android:value="action:open_search" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="import"
        android:enabled="true"
        android:icon="@drawable/ic_p_import"
        android:shortcutShortLabel="@string/shortcut_import_short"
        android:shortcutLongLabel="@string/shortcut_import_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.diegonmarcos.superapp"
            android:targetClass="com.diegonmarcos.superapp.MainActivity">
            <extra android:name="shortcut_action" android:value="action:import_configs" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="linktree"
        android:enabled="true"
        android:icon="@drawable/ic_solutions"
        android:shortcutShortLabel="@string/shortcut_linktree_short"
        android:shortcutLongLabel="@string/shortcut_linktree_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.diegonmarcos.superapp"
            android:targetClass="com.diegonmarcos.superapp.MainActivity">
            <extra android:name="shortcut_action" android:value="https://linktree.diegonmarcos.com/" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
